fix(web-components): updated side navigation z-index
Items and components from other DS were appearing above the expanded drawer of ic-side-nav, a new
Z-index has been applied which stops this behaviour. Also z-index variable added for side-nav and
banner

#322

--- a/packages/web-components/src/components/ic-side-navigation/ic-side-navigation.css
+++ b/packages/web-components/src/components/ic-side-navigation/ic-side-navigation.css
@@ -1,6 +1,5 @@
 :host {
   display: block;
-
   --side-navigation-position: fixed;
   --side-navigation-position-left: 0;
   --side-navigation-position-top: var(--ic-space-xxl);
@@ -11,6 +10,7 @@
     --ic-transition-duration-slow
   );
   --side-navigation-width: 20rem;
+  z-index: var(--ic-z-index-nav-menu);
 }
 
 :host > * {
@@ -27,6 +27,7 @@
   left: calc(var(--side-navigation-width) * -1);
   bottom: 0;
   background-color: var(--ic-theme-primary);
+  z-index: var(--ic-z-index-nav-menu);
 }
 
 :host(.inline) .side-navigation {
